// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vest.reset sanity 1`] = `
Object {
  "errorCount": 0,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "suite",
  "testCount": 0,
  "tests": Object {},
  "warnCount": 0,
}
`;

exports[`vest.reset sanity 2`] = `
Object {
  "errorCount": 2,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "suite",
  "testCount": 4,
  "tests": Object {
    "f1": Object {
      "errorCount": 1,
      "errors": Array [
        "m1",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
    "f2": Object {
      "errorCount": 1,
      "errors": Array [
        "m2",
      ],
      "testCount": 2,
      "warnCount": 1,
      "warnings": Array [
        "m2",
      ],
    },
    "f3": Object {
      "errorCount": 0,
      "testCount": 1,
      "warnCount": 0,
    },
  },
  "warnCount": 1,
}
`;
